--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,13 +29,13 @@
                         <a class="nav-link active" aria-current="page" href="{{ url_for('profile') }}">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login') }}">Sign In</a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('login') }}">Sign In</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">Sign Out</a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('logout') }}">Sign Out</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('register') }}">Sign Up</a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('register') }}">Sign Up</a>
                     </li>
                     <li class="nav-item">
                         <!-- new button for the agenda page. should be available after login
