--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="container">
-        <h3>Login</h3>
+        <h5>Please verify your Username and Email:</h4>
         {% if message %}
             <div class="alert" style="color: red;">{{ message }}</div>
         {% endif %}
@@ -13,15 +13,17 @@
                 </div>
             </div>
             <div class="row">
-                <label for="password" class="col-sm-2 col-form-label">Password</label>
+                <label for="emil" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-auto">
-                    <input type="text" class="form-control" name="password" id="username"><br>
+                    <input type="text" class="form-control" name="email" id="email"><br>
+                </div>
+                <div class="col-auto">
+                    <span id="PasswordHelpInline" class="form-text">
+                        Must be the email address you registered with
+                    </span>
                 </div>
             </div>
-            <input type="submit" class="btn-sm btn btn-outline-primary" value="Log In">
-            <small class="text-muted ml-5">
-                <a class="forgot-password" aria-current="page" href="{{ url_for('forgot_password') }}">Forgot Password?</a>
-            </small>
+            <input type="submit" class="btn-sm btn btn-outline-primary" value="Send me email">
         </form>
         
     </div>
